ok i think the main page ajax is done

--- a/templates/2012e/index.twig
+++ b/templates/2012e/index.twig
@@ -156,6 +156,16 @@
                         </span>
                         </a>
                      </li>
+                     <li class="guide-item-container hideable">
+                        <a class="guide-item " data-feed-name="education" data-feed-type="chart">
+                        <span class="thumb">
+                        <img class="system-icon system education" src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif" alt="">
+                        </span>
+                        <span class="display-name">
+                        Archive Dump
+                        </span>
+                        </a>
+                     </li>
                   </ul>
                   <div class="guide-item-container">
                      <span class="guide-item guide-item-action guide-item-fake">
