--- a/templates/2012e/_layout.twig
+++ b/templates/2012e/_layout.twig
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
    <head>
-      <script id="scriptload-1485346898" src="//web.archive.org/web/20120118121554/http://s.ytimg.com/yt/jsbin/www-searchbox-vfl2KVBpp.js" data-loaded="true"></script><script src="//archive.org/includes/analytics.js?v=cf34f82" type="text/javascript"></script>
-      <script type="text/javascript" src="/_static/js/bundle-playback.js?v=UfTkgsKx" charset="utf-8"></script>
-      <script type="text/javascript" src="/_static/js/wombat.js?v=UHAOicsW" charset="utf-8"></script>
-      <link rel="stylesheet" type="text/css" href="/_static/css/banner-styles.css?v=omkqRugM">
-      <link rel="stylesheet" type="text/css" href="/_static/css/iconochive.css?v=qtvMKcIJ">
+      <script id="scriptload-1485346898" src="//web.archive.org/web/20120118121554/http://s.ytimg.com/yt/jsbin/www-searchbox-vfl2KVBpp.js" data-loaded="true"></script>
       <script>
          var yt = yt || {};yt.timing = yt.timing || {};yt.timing.tick = function(label, opt_time) {var timer = yt.timing['timer'] || {};if(opt_time) {timer[label] = opt_time;}else {timer[label] = new Date().getTime();}yt.timing['timer'] = timer;};yt.timing.info = function(label, value) {var info_args = yt.timing['info_args'] || {};info_args[label] = value;yt.timing['info_args'] = info_args;};yt.timing.tick('start');yt.timing.info('li','0');try {yt.timing['srt'] = window.gtbExternal && window.gtbExternal.pageT() ||window.external && window.external.pageT;} catch(e) {}if (window.chrome && window.chrome.csi) {yt.timing['srt'] = Math.floor(window.chrome.csi().pageT);}if (window.msPerformance && window.msPerformance.timing) {yt.timing['srt'] = window.msPerformance.timing.responseStart - window.msPerformance.timing.navigationStart;}    
       </script>
@@ -15,7 +11,6 @@
       <link rel="search" type="application/opensearchdescription+xml" href="https://web.archive.org/web/20120118121554/http://www.youtube.com/opensearch?locale=en_US" title="YouTube Video Search">
       <link rel="icon" href="https://web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/favicon-refresh-vfldLzJxy.ico" type="image/x-icon">
       <link rel="shortcut icon" href="https://web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/favicon-refresh-vfldLzJxy.ico" type="image/x-icon">
-      <link rel="alternate" media="handheld" href="https://web.archive.org/web/20120118121554/http://m.youtube.com/index?desktop_uri=%2F&amp;gl=US">
       <meta name="description" content="Share your videos with friends, family, and the world">
       <meta name="keywords" content="video, sharing, camera phone, video phone, free, upload">
       <link id="www-core-css" rel="stylesheet" href="/assets/2012/css/www-refresh-vflq1V-TH.css">
@@ -25,7 +20,7 @@
          }
       </style>
       <link rel="stylesheet" href="/assets/2012/css/www-guide-vfl4MukmA.css">
-      <script id="www-core-js" src="//web.archive.org/web/20120118121554js_/http://s.ytimg.com/yt/jsbin/www-core-vflwwszXl.js"></script>
+      <script id="www-core-js" src="/assets/2012/js/www-core-vflwwszXl.js"></script>
 	  {% block prestart_scripts %}{% endblock %}
       <script>
          yt.setConfig({
@@ -36,24 +31,13 @@
          
          yt.setConfig('XSRF_REDIRECT_TOKEN', 'NZqBkR-7X1bAFzwHfTViv7JtZh98MTMyNjk3NTM1NUAxMzI2ODg4OTU1');
          
-         yt.setConfig('LOGGED_IN', false);
+         yt.setConfig('LOGGED_IN', true);
          yt.setConfig('SESSION_INDEX', null);
          
          yt.setConfig('FEEDBACK_LOCALE_LANGUAGE', "en");
          yt.setConfig('FEEDBACK_LOCALE_EXTRAS', {"experiments": "", "accept_language": null});
       </script>
       <script src="/assets/2012/js/www-guide-vflWpevZ9.js"></script>
-      <script>
-         window.masthead = new yt.www.ads.MastheadAd(1,
-             "cKnMIqjcLMg",
-             true);
-         
-         yt.setConfig('PYV_IS_ALLOWED', true);
-         yt.setConfig('PYV_AD_CHANNEL', "pyv-top-right-homepage pyv-top-right-homepage-us logged-out");
-         
-         yt.pubsub.subscribe('init', yt.www.guide.init);
-         
-      </script>
       <script>
          if (window.yt.timing) {
            yt.timing.tick('ct');
